# simple_game_engine

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp  sample_fragment.shader  sample_vertex.shader
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: cube_vertices.h
include/graphics/: shader.h
include/input/: key_code.h  keyboard_handler.h  mouse_handler.h
include/math/: constants.h  mat4.h  matrix_factory.h  vec2.h  vec3.h  vec4.h
include/mrld/: attrib_data_buffer.h  camera.h  constants.h  index_buffer.h  keyboard_handler.h  math.h  mouse_handler.h  mrld.h  quaternion.h  renderable.h  renderable2d.h  renderer.h  renderer2d.h  shader.h  vertex_array.h
include/window/: window.h
res/: cube_vertices.h  teapot.h  tree.mtl
src/camera/: camera.cpp  camera.h  fps_camera.cpp  fps_camera.h  orthographic_camera.cpp  orthographic_camera.h
src/graphics/: color.h  material.h  shader.cpp
src/graphics/camera/: camera.h  fps_camera.cpp  fps_camera.h
src/graphics/lighting/: directional_light.h  light.h  point_light.h
src/graphics/materials/: color.h  material.h
src/graphics/rendering/buffer/: attrib_data_buffer.cpp  attrib_data_buffer.h  index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_data.h
src/graphics/rendering/buffers/: attrib_data_buffer.cpp  index_buffer.cpp  vertex_array.cpp
src/graphics/rendering/group/: group.cpp  group.h  group2d.cpp  group2d.h
src/graphics/rendering/layer/: layer.cpp  layer.h  layer2d.cpp  layer2d.h
src/graphics/rendering/layer/layer2d/: layer2d.cpp  layer2d.h
src/graphics/rendering/renderable/: model.cpp  model.h  renderable.h  sprite.cpp  sprite.h
src/graphics/rendering/renderable/drawable/: drawable.cpp  drawable.h  model.cpp  model.h  sprite.cpp  sprite.h
src/graphics/rendering/renderable/group/: group.cpp  group.h
src/graphics/rendering/renderable/layer/: layer.cpp  layer.h  layer2d.cpp
src/graphics/rendering/renderer/: renderable.h  renderable2d.cpp  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  renderer3d.cpp  renderer3d.h
src/graphics/rendering/renderer/renderer2d/: renderable2d.cpp  renderable2d.h  renderer2d.cpp  renderer2d.h  sprite.cpp  sprite.h
src/graphics/shader/: sample_fragment.shader  sample_vertex.shader  shader.cpp  shader.h
src/graphics/shader/shader_files/: sample_fragment.shader  sample_vertex.shader
src/graphics/texture/: texture.cpp  texture.h
src/input/: key_code.h  keyboard_handler.cpp  mouse_handler.cpp
src/input/keyboard/: keyboard_handler.cpp  keyboard_handler.h
src/input/mouse/: mouse_handler.cpp  mouse_handler.h
src/logging/: logger.cpp
src/math/: constants.h  mat4.cpp  mat4.h  math_util.h  matrix_factory.cpp  quaternion.cpp  quaternion.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/physics/: body.cpp  body.h  object.cpp  object.h  physics_engine.cpp  physics_engine.h  physics_properties.h  rigidbody.cpp  rigidbody.h  transform.h
src/physics/collisions/: collider.h  collision.h  collision_algo.cpp  collision_algo.h  collision_point.h
src/physics/collisions/colliders/: plane_collider.h  ray_collider.h  sphere_collider.h
src/physics/collisions/solver/: impulse_solver.cpp  impulse_solver.h  position_correction_solver.cpp  position_correction_solver.h  recursive_position_correction_solver.cpp  recursive_position_correction_solver.h  simple_position_correction_solver.cpp  simple_position_correction_solver.h  solver.h
src/utils/: file_handler.cpp  file_handler.h  gl_debug.h  logger.cpp  logger.h  obj_model_parser.cpp  obj_model_parser.h  timer.cpp  timer.h
src/window/: window.cpp  window.h
